<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_upload_guide"
                    android:textColor="@color/color_light_dark"
                    android:textSize="12sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/main_info"
                        android:textColor="@color/color_light_dark"
                        android:textSize="14dp" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/nickname" />

                    <EditText
                        android:id="@+id/etNickname"
                        style="@style/SignupItemValue"
                        android:clickable="false"
                        android:maxLength="8"
                        android:foreground="@color/color_transparent"
                        android:hint="@string/input_nickname" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/tall" />

                    <TextView
                        android:id="@+id/tvTall"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_tall" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/age" />

                    <TextView
                        android:id="@+id/tvAge"
                        style="@style/SignupItemValue"
                        android:focusable="false"
                        android:clickable="false"
                        android:hint="@string/select_age" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/area" />

                    <TextView
                        android:id="@+id/etArea"
                        style="@style/SignupItemValue"
                        android:hint="@string/input_area" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/school" />

                    <EditText
                        android:id="@+id/etSchool"
                        style="@style/SignupItemValue"
                        android:maxLength="20"
                        android:hint="@string/select_school" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/detail_info"
                        android:textColor="@color/color_light_dark"
                        android:textSize="14dp" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/job" />

                    <EditText
                        android:id="@+id/etJob"
                        style="@style/SignupItemValue"
                        android:maxLength="8"
                        android:hint="@string/select_job" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/religion" />

                    <TextView
                        android:id="@+id/tvBelief"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_belief" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/drinking" />

                    <TextView
                        android:id="@+id/tvDrinking"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_drinking" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/smoking" />

                    <TextView
                        android:id="@+id/tvSmoking"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_smoking" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/body" />

                    <TextView
                        android:id="@+id/tvBody"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_body" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/hobby" />

                    <TextView
                        android:id="@+id/tvHobby"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_hobby" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/love_style" />

                    <TextView
                        android:id="@+id/tvLove"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_love_style" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/self_introduction"
                        android:textColor="@color/color_light_dark"
                        android:textSize="14dp" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/etSelfIntroduction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:paddingTop="10dp"
                            android:background="@drawable/underline"
                            android:drawableStart="@drawable/ic_checkbox2"
                            android:paddingLeft="3dp"
                            android:drawablePadding="15dp"
                            android:nestedScrollingEnabled="true"
                            android:lines="3"
                            android:overScrollMode="always"
                            android:paddingBottom="5dp"
                            android:focusableInTouchMode="true"
                            android:scrollbars="vertical"
                            android:scrollbarStyle="insideInset"
                            android:focusable="true"
                            android:textColor="@color/color_light_dark"
                            android:textColorHint="@color/color_hint"
                            android:hint="소개글을 입력하세요."/>

                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnRegistering"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/btn_bg_pink"
            android:foreground="?attr/selectableItemBackground"
            android:paddingBottom="10dp"
            android:text="@string/registering"
            android:textColor="@android:color/white"
            android:textSize="15dp" />

    </LinearLayout>

</layout>