<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/containerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical"
        tools:context=".ui.page.intro.SignupActivity">

        <LinearLayout


            android:gravity="center|left"
            android:id="@+id/navigation_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_top_header"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_marginLeft="@dimen/_14sdp"
                android:id="@+id/rlt_back"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="match_parent"
                android:background="@color/color_transparent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/comm_ico_back" />
            </RelativeLayout>

            <TextView
                android:layout_marginRight="@dimen/_30sdp"
                android:id="@+id/txv_top_nickname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="빨간망토 챠챠"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/nanum_square_b" />

            <!--        <RelativeLayout-->
            <!--            android:id="@+id/rlt_blame"-->
            <!--            android:layout_width="58dp"-->
            <!--            android:layout_height="58dp"-->
            <!--            android:layout_alignParentEnd="true"-->
            <!--            android:background="@color/color_transparent"-->
            <!--            android:orientation="vertical">-->

            <!--            <ImageView-->
            <!--                android:layout_width="41dp"-->
            <!--                android:layout_height="58dp"-->
            <!--                android:layout_centerHorizontal="true"-->
            <!--                android:layout_centerVertical="true"-->
            <!--                android:adjustViewBounds="true"-->
            <!--                android:src="@drawable/ico_elipse" />-->
            <!--        </RelativeLayout>-->

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/profile_upload_guide"
                    android:textColor="@color/color_light_dark"
                    android:textSize="12sp"
                    app:fontname="@{`NotoSansCJKkr-Regular.otf`}" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/main_info"
                        android:textColor="@color/color_light_dark"
                        android:textSize="14sp"
                        app:fontname="@{`NotoSansCJKkr-Regular.otf`}" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/nickname" />

                    <EditText
                        android:id="@+id/etNickname"
                        style="@style/SignupItemValue"
                        android:clickable="false"
                        android:focusable="false"
                        android:foreground="@color/color_transparent"
                        android:hint="@string/input_nickname" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/tall" />

                    <TextView
                        android:id="@+id/tvTall"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_tall" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/age" />

                    <TextView
                        android:id="@+id/tvAge"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_age" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/area" />

                    <TextView
                        android:id="@+id/etArea"
                        style="@style/SignupItemValue"
                        android:hint="@string/input_area" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/school" />

                    <EditText
                        android:id="@+id/etSchool"
                        style="@style/SignupItemValue"
                        android:focusable="false"
                        android:clickable="false"
                        android:foreground="@color/color_transparent"
                        android:hint="@string/select_school" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/detail_info"
                        android:textColor="@color/color_light_dark"
                        android:textSize="14sp" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/job" />

                    <EditText
                        android:id="@+id/etJob"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_job" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/religion" />

                    <TextView
                        android:id="@+id/tvBelief"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_belief" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/drinking" />

                    <TextView
                        android:id="@+id/tvDrinking"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_drinking" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/smoking" />

                    <TextView
                        android:id="@+id/tvSmoking"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_smoking" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/body" />

                    <TextView
                        android:id="@+id/tvBody"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_body" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/hobby" />

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/tvHobby"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_hobby" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/love_style" />

                    <TextView
                        android:id="@+id/tvLove"
                        style="@style/SignupItemValue"
                        android:hint="@string/select_love_style" />

                    <com.character.microblogapp.ui.widget.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        app:text="@string/self_introduction"
                      />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/SignupItemValue"
                            android:id="@+id/etSelfIntroduction"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_34sdp"
                            android:lines="3"
                            android:focusable="true"
                            android:foreground="@color/color_transparent"
                            android:hint="소개글을 입력하세요."/>

                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnRegistering"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/btn_bg_pink"
            android:foreground="?attr/selectableItemBackground"
            android:paddingBottom="10dp"
            android:text="재심사 받기"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>

</layout>